# Billiard

./: CMakeLists.txt  Main.cpp  bonka.make
Codegen/: PatternMainCMakeLists.txt
Geometry/: CMakeLists.txt  Matrix.cpp  Matrix.h  Plane.cpp  Plane.h  Primitive.cpp  Primitive.h  Ray3D.h  Rectangle3D.cpp  Rectangle3D.h  Sphere.cpp  Sphere.h  Vector.h
Kinematics/: CMakeLists.txt  GameObjects.cpp  GameObjects.h  Interaction.cpp  Interaction.h
Scene/: CMakeLists.txt  Camera.cpp  Camera.h  Scene.cpp  Scene.h  Table.cpp  Table.h  Thing3D.cpp  Thing3D.h
